--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Rennan Oliveira <rennan_neves@live.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
     "@types/multer": "^1.4.5",
