--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "docker:migration-run": "docker exec rentalx yarn typeorm migration:run"
   },
   "dependencies": {
     "@types/multer": "^1.4.5",
@@ -16,6 +17,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   },
