--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,24 @@ version: "3.7"
 services:
   database_ignite:
     image: postgres
-    container_name: database_ignite
+    container_name: database_rentx
     restart: always
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=ignite
-      - POSTGRES_DB=rentalx
+      - POSTGRES_PASSWORD=rentx
+      - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
     networks:
       - app-network
   app:
     build: .
-    container_name: rentalx
+    container_name: rentx
     ports:
       - 3333:3333
+      - 9229:9229
     volumes:
       - .:/usr/app
     networks:
