--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
   "type": "postgres",
+  "host": "172.20.0.3",
   "port": 5432,
-  "host": "172.21.0.2",
   "username": "docker",
-  "password": "ignite",
-  "database": "rentalx",
+  "password": "rentx",
+  "database": "rentx",
   "entities":["./src/modules/**/entities/*.ts"],
   "migrations":["./src/database/migrations/*.ts"],
   "cli":{
