--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "docker:migration-run": "docker exec rentalx yarn typeorm migration:run"
+    "docker:migration-run": "docker exec rentx yarn typeorm migration:run",
+    "docker:migration-revert": "docker exec rentx yarn typeorm migration:revert"
   },
   "dependencies": {
     "@types/multer": "^1.4.5",
+    "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
@@ -22,8 +25,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
