--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "docker:migration-run": "docker exec rentx yarn typeorm migration:run",
-    "docker:migration-revert": "docker exec rentx yarn typeorm migration:revert"
+    "docker:migration-revert": "docker exec rentx yarn typeorm migration:revert",
+    "test": "jest"
   },
   "dependencies": {
     "@types/multer": "^1.4.5",
@@ -29,6 +30,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
@@ -41,7 +43,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
