--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
   "type": "postgres",
-  "host": "172.20.0.3",
+  "host": "localhost",
   "port": 5432,
   "username": "docker",
   "password": "rentx",
