refactor: :art: update database host in env

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ AWS_REGION=
 AWS_BUCKET=
 AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
+# if is using docker go with database service name if not localhost
+DATABASE_HOST="localhost"
 # local | s3
-disk=
+disk=local
 # ethereal | ses
-MAIL_PROVIDER=
+MAIL_PROVIDER=ethereal
