--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
-          target: "test"
+          target: "~/app/study-ignite-rentx"
       
