feat: :lock: add cors

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ AWS_REGION=
 AWS_BUCKET=
 AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
-# if is using docker go with database service name if not localhost
+# if are using docker go with database service name if not localhost
 DATABASE_HOST="localhost"
 # local | s3
 disk=local
