--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  #pull_request:
+    #branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,18 +24,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       - name: Setup Nodejs
         uses: actions/setup-node@v2
-        with: 
+        with:
           node-version: 14.x
-          
+
       - name: Install Dependencies
         run: yarn
-        
+
       - name: Build
         run: yarn build
-        
+
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -44,7 +44,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "~/app/study-ignite-rentx"
-          
+
       - name: UPDATE API
         uses: appleboy/ssh-action@master
         with:
@@ -56,5 +56,5 @@ jobs:
             cd ~/app/study-ignite-rentx
             node node_modules/.bin/typeorm migrations:run
             pm2 restart rentx
-            
-      
+
+
