--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "aws-sdk": "^2.893.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
