--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/app/study-ignite-rentx
+            yarn
             node node_modules/.bin/typeorm migrations:run
             pm2 restart rentx
 
