feat: :sparkles: add Rate Limiter

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DATABASE_HOST="localhost"
 disk=local
 # ethereal | ses
 MAIL_PROVIDER=ethereal
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
