--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
     volumes:
       - pgdata:/data/postgres
 
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+
   app:
     build: .
     container_name: rentx
@@ -26,6 +31,7 @@ services:
       - database_ignite
     depends_on:
       - database_ignite
+      - redis
 
 volumes:
   pgdata:
