feat: add sentry

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ AWS_BUCKET=
 AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
 # if are using docker go with database service name if not localhost
-DATABASE_HOST="localhost"
+DATABASE_HOST=localhost
 # local | s3
 disk=local
 # ethereal | ses
@@ -16,3 +16,5 @@ MAIL_PROVIDER=ethereal
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+
+SENTRY_DSN=
