--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.3.5",
+    "@sentry/tracing": "^6.3.5",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "aws-sdk": "^2.893.0",
